--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,13 @@ services:
         - .:/code
         ports:
         - 8000:8000
+        depends_on:
+            - db
+    db:
+      image: postgres:11
+      environment:
+        POSTGRES_PASSWORD: postgres
+        POSTGRES_USER: postgres
+        POSTGRES_DB: postgres
+      ports:
+          - "5432:5432"
